[gd_scene load_steps=6 format=2]

[ext_resource path="res://Objects/Mapobjects/JumpPad.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 5.80057, 0.680764, 5.67877 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0, 1, 0.0156863, 1 )

[sub_resource type="CubeMesh" id=1]
material = SubResource( 2 )
size = Vector3( 12, 0.25, 12 )

[sub_resource type="PrismMesh" id=4]
material = SubResource( 2 )

[node name="JumpPad" type="Spatial"]
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.598426, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 1, 0, -0.125156, -5.47072e-09, 0, 0, 0, 0.0585955, 0, 2.61234, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.418063, 0, 3.4936, 0 )
mesh = SubResource( 4 )
material/0 = null

[node name="LaunchCooldown" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="LaunchSound" type="AudioStreamPlayer3D" parent="."]
unit_size = 40.0
max_db = -1.0

[node name="LaunchPoint" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7, 0 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="LaunchCooldown" to="." method="_on_LaunchCooldown_timeout"]
